--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
   listen   80; ## listen for ipv4; this line is default and implied
   listen   [::]:80 default ipv6only=on; ## listen for ipv6
 
-  root /var/www/public;
+  root /var/www/html/public;
   index index.php index.html index.htm;
 
   # Make site accessible from http://localhost/
@@ -26,14 +26,14 @@ server {
   #
   error_page 500 502 503 504 /50x.html;
   location = /50x.html {
-    root /var/www;
+    root /var/www/html;
   }
 
   # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
   #
   location ~ \.php$ {
    fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
+    fastcgi_pass 127.0.0.1:9000;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_param SCRIPT_NAME $fastcgi_script_name;
     fastcgi_param PATH_INFO $fastcgi_path_info;
