--- a/supervisord.conf
+++ b/supervisord.conf
@@ -11,7 +11,7 @@ stopwaitsecs=10
 redirect_stderr=true
 
 [program:php-fpm]
-command=bash -c "sleep 1 && /usr/local/php7/sbin/php-fpm --fpm-config /usr/local/php7/etc/php-fpm.conf --pid /usr/local/php7/var/run/php-fpm.pid"
+command=bash -c "sleep 1 && /usr/sbin/php-fpm7.2"
 process_name=%(program_name)s
 autostart=true
 autorestart=true
